# liberated-chat

./: .dockerignore  .env  .gitignore  API_TESTING.txt  Cargo.toml  Dockerfile  Justfile  README.md  config.toml
.cargo/: config.toml
bruno-tests/: Get Posts.bru  Login.bru  Logout.bru  New Post.bru  Register.bru  bruno.json
liberated-chat-frontend/: Cargo.toml  index.html  style.css
liberated-chat-frontend/src/: main.rs
liberated-chat-frontend/src/components/: login.rs  mod.rs  navbar.rs
liberated-chat-frontend/src/components/chat/: footer.rs  message.rs  mod.rs
liberated-chat-frontend/src/utils/: auth.rs  mod.rs  posts.rs
liberated-chat-server/: Cargo.toml
liberated-chat-server/data/: data.db
liberated-chat-server/src/: main.rs  types.rs  utils.rs
liberated-chat-shuttle/: .env  Cargo.toml
liberated-chat-shuttle/frontend/: index.html  liberated-chat-frontend-e1adf9e37a74cbd0.js  liberated-chat-frontend-e1adf9e37a74cbd0_bg.wasm
liberated-chat-shuttle/src/: main.rs  utils.rs
