[package]
name = "liberated-chat-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.9", features = ["csr"], default-features = false }
reqwest = { version = "0.11.26", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false }
