[package]
name = "liberated-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.5", default-features = false }
actix-web = { version = "4.5.1", default-features = false, features = [
  "cookies",
  "macros",
  "compress-gzip",
] }
argon2 = "0.5.3"
derive_more = { version = "0.99.17", default-features = false }
dotenv = "0.15.0"
rusqlite = { version = "0.31.0", features = [
  "bundled",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = { version = "1.0.114", default-features = false }
time = { version = "0.3.34", default-features = false }
uuid = { version = "1.7.0", features = ["v4"], default-features = false }
