[package]
name = "liberated-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0", default-features = false }

axum = { version = "0.7.5", features = [
  "http1",
  "tokio",
], default-features = false }
tower-http = { version = "0.5.2", features = [
  "compression-gzip",
  "fs",
], default-features = false }
axum-extra = { version = "0.9.3", features = [
  "cookie",
], default-features = false }

argon2 = { version = "0.5.3", features = [
  "password-hash",
  "alloc",
], default-features = false }
rand_core = { version = "0.6.4", features = [
  "getrandom",
], default-features = false }
rusqlite = { version = "0.31.0", features = [
  "bundled",
], default-features = false }

serde = { version = "1.0.197", features = ["derive"], default-features = false }
serde_json = { version = "1.0.114", features = [
  "alloc",
], default-features = false }

tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
], default-features = false }

time = { version = "0.3.34", default-features = false }
uuid = { version = "1.7.0", features = ["v4"], default-features = false }

tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
], default-features = false }
